<resources>
    <string name="app_name">Tawfiq</string>

    <string name="prayer_times">নামাজের সময়সূচী</string>
    <string name="ramadan_times">রমজানের সময়সূচী</string>
    <string name="important_sura">গুরুত্বপূর্ণ সূরাসমূহ</string>
    <string name="important_dua">গুরুত্বপূর্ণ দোয়াসমূহ</string>
    <string name="tasbeeh_count">তসবীহ গননা</string>
    <string name="qibla">কিবলা</string>

    <string name="ramadan">রমজান</string>
    <string name="date">তারিখ</string>
    <string name="day">দিন</string>
    <string name="sahri_time">সেহরির\nশেষ সময়</string>
    <string name="iftar_time">ইফতারের\nসময়</string>

    <string name="todays_schedule">আজকের সময়সূচী %1s</string>
    <string name="source_string">আরবি ও বাংলা অনুবাদ সূত্র:\nআল-কুরআনুল-কারিম\nসম্পাদনা পরিষদ, ইসলামিক ফাউন্ডেশন</string>
    <string name="select_district">জেলা নির্বাচন করুন</string>
</resources>