<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.RamadanFragment">

    <TextView
        android:id="@+id/tvHeader"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ramadan_times" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSelectDistrict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/select_district" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/spinnerDistrict"
                android:layout_alignLeft="@+id/spinnerDistrict"
                android:layout_alignTop="@+id/spinnerDistrict"
                android:layout_alignEnd="@+id/spinnerDistrict"
                android:layout_alignRight="@+id/spinnerDistrict"
                android:layout_alignBottom="@+id/spinnerDistrict"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/bg_spinner" />

            <Spinner
                android:id="@+id/spinnerDistrict"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:background="@null"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp" />

        </RelativeLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardBackgroundColor="@color/shah_cement_red"
        app:cardCornerRadius="6dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="center"
                android:text="@string/ramadan"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvSahriTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sahri_time"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvIftarTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/iftar_time"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRamadanTimes"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>